add styles for controls panel

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </header>
     <main>
         <section class="controls-panel">
-            <div class="controls-panel__sorting">
+            <div class="controls-panel__column">
                 <div class="controls-panel__row">
-                    <div class="controls-panel__item">ID</div>
+                    <div class="controls-panel__item controls-panel__item--active">ID</div>
                     <div class="controls-panel__item">Name</div>
                     <div class="controls-panel__item">Age</div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="controls-panel__item">Descending order</div>
                 </div>
             </div>
-            <div class="controls-panel__view">
+            <div class="controls-panel__column">
                 <div class="controls-panel__row">
                     <div class="controls-panel__item">Table</div>
                     <div class="controls-panel__item">Preview</div>
@@ -33,7 +33,9 @@
             </div>
         </section>
         <section id="app">
-
+            <div class="characters-list">
+                <div class="characters-list__item"></div>
+            </div>
         </section>
     </main>
     <footer>
