add markup and styles for table characters view

--- a/index.html
+++ b/index.html
@@ -32,9 +32,24 @@
                 </div>
             </div>
         </section>
-        <section id="app">
-            <div class="characters-list">
-                <div class="characters-list__item"></div>
+        <section class="character__list">
+            <div class="character__item">
+                <div class="character__profile">
+                    <div class="character__avatar"></div>
+                    <div class="character__name">Gilbert Morton</div>
+                </div>
+                <div class="character__age">30 years old</div>
+                <div class="character__phone">(417) 000-0000</div>
+                <img class="character__star" src="./images/star-empty.png" alt="star-icon" />
+            </div>
+            <div class="character__item">
+                <div class="character__profile">
+                    <div class="character__avatar"></div>
+                    <div class="character__name">Gilbert Morton</div>
+                </div>
+                <div class="character__age">30 years old</div>
+                <div class="character__phone">(417) 000-0000</div>
+                <img class="character__star" src="./images/star-filled.png" alt="star-icon" />
             </div>
         </section>
     </main>
