add markup, styles and video content for preview characters view

--- a/index.html
+++ b/index.html
@@ -51,6 +51,51 @@
                 <div class="character__phone">(417) 000-0000</div>
                 <img class="character__star" src="./images/star-filled.png" alt="star-icon" />
             </div>
+            <div class="character__row character__row--full">
+                <div class="character__item character__card character__card--full">
+                    <div class="character__card__wrapper">
+                        <div class="character__info">
+                            <div class="character__profile">
+                                <div class="character__avatar"></div>
+                                <div class="character__name">Gilbert Morton</div>
+                            </div>
+                            <div class="character__age">30 years old</div>
+                            <div class="character__phone">(417) 000-0000</div>
+                            <div class="character__description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</div>
+                        </div>
+                        <img class="character__star" src="./images/star-empty.png" alt="star-icon" />
+                    </div>
+                    <div class="character__card--video">
+                        <video class="character__video" src="./videos/shoe.mp4" controls></video>
+                    </div>
+                </div>
+            </div>
+            <div class="character__row">
+                <div class="character__item character__card">
+                    <div class="character__info">
+                        <div class="character__profile">
+                            <div class="character__avatar"></div>
+                            <div class="character__name">Gilbert Morton</div>
+                        </div>
+                        <div class="character__age">30 years old</div>
+                        <div class="character__phone">(417) 000-0000</div>
+                        <div class="character__description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</div>
+                    </div>
+                    <img class="character__star" src="./images/star-filled.png" alt="star-icon" />
+                </div>
+                <div class="character__item character__card">
+                    <div class="character__info">
+                        <div class="character__profile">
+                            <div class="character__avatar"></div>
+                            <div class="character__name">Gilbert Morton</div>
+                        </div>
+                        <div class="character__age">30 years old</div>
+                        <div class="character__phone">(417) 000-0000</div>
+                        <div class="character__description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</div>
+                    </div>
+                    <img class="character__star" src="./images/star-filled.png" alt="star-icon" />
+                </div>
+            </div>
         </section>
     </main>
     <footer>
