change semantic meaning of the controls panel block

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <header>
         JustJSApp
     </header>
+    <aside class="controls-panel">
+        <div class="controls-panel__column">
+            <div class="controls-panel__row">
+                <div class="controls-panel__item controls-panel__item--active">ID</div>
+                <div class="controls-panel__item">Name</div>
+                <div class="controls-panel__item">Age</div>
+            </div>
+            <div class="controls-panel__row">
+                <div class="controls-panel__item">Ascending order</div>
+                <div class="controls-panel__item">Descending order</div>
+            </div>
+        </div>
+        <div class="controls-panel__column">
+            <div class="controls-panel__row">
+                <div class="controls-panel__item">Table</div>
+                <div class="controls-panel__item">Preview</div>
+            </div>
+        </div>
+    </aside>
     <main>
-        <section class="controls-panel">
-            <div class="controls-panel__column">
-                <div class="controls-panel__row">
-                    <div class="controls-panel__item controls-panel__item--active">ID</div>
-                    <div class="controls-panel__item">Name</div>
-                    <div class="controls-panel__item">Age</div>
-                </div>
-                <div class="controls-panel__row">
-                    <div class="controls-panel__item">Ascending order</div>
-                    <div class="controls-panel__item">Descending order</div>
-                </div>
-            </div>
-            <div class="controls-panel__column">
-                <div class="controls-panel__row">
-                    <div class="controls-panel__item">Table</div>
-                    <div class="controls-panel__item">Preview</div>
-                </div>
-            </div>
-        </section>
         <section id="app">
             <div class="characters-list">
                 <div class="characters-list__item"></div>
